Fix spacing

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -37,6 +37,7 @@
   border: 1px solid #d5d5d5;
   border-radius: 6px;
   padding: 10px 0;
+  margin-top: 26px;
 }
 
 .search__results ul {
